fiex bug in turn and changed spans to buttons

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
 <div class="gameBoard">
     <div class="cells">
-    <span tag="empty1" id="elem1" class="cell">l</span>
-    <span tag="empty2" id="elem2" class="cell">o</span>
-    <span tag="empty3" id="elem3" class="cell">p</span>
+    <button tag="empty1" id="elem1" class="cell">l</button>
+    <button tag="empty2" id="elem2" class="cell">o</button>
+    <button tag="empty3" id="elem3" class="cell">p</button>
     </div>
     <div class="cells">
-    <span tag="empty4" id="elem4" class="cell">xc</span>
-    <span tag="empty5" id="elem5" class="cell">v</span>
-    <span tag="empty6" id="elem6" class="cell">ldspv</span>
+    <button tag="empty4" id="elem4" class="cell">xc</button>
+    <button tag="empty5" id="elem5" class="cell">v</button>
+    <button tag="empty6" id="elem6" class="cell">ldspv</button>
     </div>
     <div class="cells">
-    <span tag="empty7" id="elem7" class="cell">vl</span>
-    <span tag="empty8" id="elem8" class="cell">vl</span>
-    <span tag="empty9" id="elem9" class="cell">vl</span>
+    <button tag="empty7" id="elem7" class="cell">vl</button>
+    <button tag="empty8" id="elem8" class="cell">vl</button>
+    <button tag="empty9" id="elem9" class="cell">vl</button>
     </div>
 </div>
 <button class="restart-btn">Restart</button>  
