--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tack Toe</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+<div class="container">
+<h1>Tic-Tac-Toe</h1>
+<div class="scoreboard">
+    <h4 class="p1">Player 1 Score: </h4>
+    <h4 class="p2">Player 2 Score: </h4>
+</div>
+
+<div class="gameBoard">
+    <div class="cells">
+    <span tag="empty1" id="elem1" class="cell">l</span>
+    <span tag="empty2" id="elem2" class="cell">o</span>
+    <span tag="empty3" id="elem3" class="cell">p</span>
+    </div>
+    <div class="cells">
+    <span tag="empty4" id="elem4" class="cell">xc</span>
+    <span tag="empty5" id="elem5" class="cell">v</span>
+    <span tag="empty6" id="elem6" class="cell">ldspv</span>
+    </div>
+    <div class="cells">
+    <span tag="empty7" id="elem7" class="cell">vl</span>
+    <span tag="empty8" id="elem8" class="cell">vl</span>
+    <span tag="empty9" id="elem9" class="cell">vl</span>
+    </div>
+</div>
+<button class="restart-btn">Restart</button>  
+</div>  
 </body>
+<script src="index.js"></script>
 </html>
