added reset function

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <button tag="empty9" id="elem9" class="cell">vl</button>
     </div>
 </div>
-<button class="restart-btn">Restart</button>  
+<button class="restart-btn" onclick="reset()">Restart</button>  
 </div>  
 </body>
 <script src="index.js"></script>
