--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button tag="empty1" id="elem1" class="cell" onclick="turn('elem1')">elem1</button>
     <button tag="empty2" id="elem2" class="cell" onclick="turn('elem2')">elem2</button>
     <button tag="empty3" id="elem3" class="cell" onclick="turn('elem3')">elem3</button>
-    <button tag="empty4" id="elem4" class="cell" onclick="turn('elemS4')">elem4</button>
+    <button tag="empty4" id="elem4" class="cell" onclick="turn('elem4')">elem4</button>
     <button tag="empty5" id="elem5" class="cell" onclick="turn('elem5')">elem5</button>
     <button tag="empty6" id="elem6" class="cell" onclick="turn('elem6')">elem6</button>
     <button tag="empty7" id="elem7" class="cell" onclick="turn('elem7')">elem7</button>
