--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 
 <div class="board">
-    <button tag="empty" id="elem1" class="cell" onclick="turn('elem1')">elem1</button>
-    <button tag="empty" id="elem2" class="cell" onclick="turn('elem2')">elem2</button>
-    <button tag="empty" id="elem3" class="cell" onclick="turn('elem3')">elem3</button>
-    <button tag="empty" id="elem4" class="cell" onclick="turn('elem4')">elem4</button>
-    <button tag="empty" id="elem5" class="cell" onclick="turn('elem5')">elem5</button>
-    <button tag="empty" id="elem6" class="cell" onclick="turn('elem6')">elem6</button>
-    <button tag="empty" id="elem7" class="cell" onclick="turn('elem7')">elem7</button>
-    <button tag="empty" id="elem8" class="cell" onclick="turn('elem8')">elem8</button>
-    <button tag="empty" id="elem9" class="cell" onclick="turn('elem9')">elem9</button>
+    <button tag="empty" id="elem1" class="cell" onclick="turn('elem1')"></button>
+    <button tag="empty" id="elem2" class="cell" onclick="turn('elem2')"></button>
+    <button tag="empty" id="elem3" class="cell" onclick="turn('elem3')"></button>
+    <button tag="empty" id="elem4" class="cell" onclick="turn('elem4')"></button>
+    <button tag="empty" id="elem5" class="cell" onclick="turn('elem5')"></button>
+    <button tag="empty" id="elem6" class="cell" onclick="turn('elem6')"></button>
+    <button tag="empty" id="elem7" class="cell" onclick="turn('elem7')"></button>
+    <button tag="empty" id="elem8" class="cell" onclick="turn('elem8')"></button>
+    <button tag="empty" id="elem9" class="cell" onclick="turn('elem9')"></button>
 </div>  
 
 <button class="restartButton" onclick="reset()">Restart</button>  
