Added green squares. Score still isn't working

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div>
         <h1>Tic-Tac-Toe</h1>
         <div class="scoreboard">
-            <h4 class="p1">Player X Score: </h4>
-            <h4 class="p2">Player O Score: </h4>
+            <h4 class="p1" id="playerx">Player X Score: 0</h4>
+            <h4 class="p2" id="playero">Player O Score: 0</h4>
         </div>
     </div>
 
