fixed auto reset glitch, split restart into 2 buttons, fixed score glitch

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <button tag="empty" id="elem9" class="cell" onclick="turn('elem9')"></button>
 </div>  
 
-<button class="restartButton" onclick="reset()">Restart</button>  
+<button class="restartButton" onclick="reset(false)">Reset</button>  
+<button class="restartButton" onclick="reset(true)">Restart</button>  
 
 </body>
 <script src="index.js"></script>
