--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <button tag="empty" id="elem9" class="cell" onclick="turn('elem9')"></button>
 </div>  
 
-<button class="restartButton" onclick="reset(false)">Reset</button>  
-<button class="restartButton" onclick="reset(true)">Restart</button>  
+<button class="restartButton" onclick="reset(false)">Reset Board</button>  
+<button class="restartButton" onclick="reset(true)">Reset All</button>  
 
 </body>
 <script src="index.js"></script>
